<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_EncoderConfig" Id="{c743eea1-cc58-02fd-200e-1cde2d5de04d}">
    <Declaration><![CDATA[TYPE ST_EncoderConfig :
STRUCT
	bIsIntegral   			: BOOL := FALSE;  //Integrate input value
	fNumerator 	  			: REAL := 0.0001; //[unit/INC]
	fDenominator  			: REAL := 1.0; 	// Scaling
	fModulo 	  			: REAL := 0; 	 	// Base divisor for modulo calculation [unit]; If not used set to 0.0	
	fInputFactor  			: REAL := 1.0; 
	fOutputFactor 			: REAL := 1.0;
	bInvertIncrementValue 	: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>