<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_Encoder" Id="{2481e67b-49df-010a-3d7c-b78131fdefee}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Encoder
VAR_INPUT
	fInput 			: REAL; //Input Value [unit] or [unit/s]	
	stConfig 		: ST_EncoderConfig;	
END_VAR

VAR_OUTPUT
	nPosition 		: DINT; //Position [INC]
	fPosition 		: LREAL;
END_VAR

VAR
	fFactorNumDen 	: REAL;
	fFactorDenNum 	: REAL;		
	fValue 			: LREAL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[InitRun();
ControlLogic();]]></ST>
    </Implementation>
    <Method Name="ControlLogic" Id="{5134b146-1c31-0f5b-3051-4d673614d13c}">
      <Declaration><![CDATA[METHOD PRIVATE ControlLogic
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF stConfig.bIsIntegral THEN
	fValue := fValue + (fInput * stConfig.fInputFactor * GVL_Core.fbSystem.fDeltaTime);
ELSE
	fValue := fInput * stConfig.fInputFactor;
END_IF

IF stConfig.fModulo > 0.0 THEN
	fPosition := LREAL_TO_REAL(LMOD(fValue, stConfig.fModulo));
ELSE
	fPosition := fValue;
END_IF

IF stConfig.bInvertIncrementValue THEN
	nPosition := LREAL_TO_DINT(fPosition * -fFactorDenNum);
ELSE		
	nPosition := LREAL_TO_DINT(fPosition * fFactorDenNum);
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="InitRun" Id="{85b18080-55e6-01d6-2893-6d01e4fc0268}">
      <Declaration><![CDATA[METHOD PRIVATE InitRun
VAR_INST
	bInitRun : BOOL := TRUE;
END_VAR

]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF NOT bInitRun THEN RETURN; END_IF
bInitRun := FALSE;

fFactorNumDen := stConfig.fNumerator / stConfig.fDenominator; // Scaling factor INC to Units ??
fFactorDenNum := stConfig.fDenominator / stConfig.fNumerator; // Scaling factor Units to INC]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_Encoder">
      <LineId Id="9" Count="0" />
      <LineId Id="23" Count="0" />
    </LineIds>
    <LineIds Name="FB_Encoder.ControlLogic">
      <LineId Id="6" Count="10" />
      <LineId Id="19" Count="1" />
      <LineId Id="26" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Encoder.InitRun">
      <LineId Id="9" Count="3" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>